translation-tool/inputs/source_meta/objects/HSvc_BOM_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Effective_Date__c &lt;= TODAY() &amp;&amp; Expiry_Date__c &gt;= TODAY()&amp;&amp; Effective_Date__c &lt;= Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adapter_Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Adapter Model</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>BOM Configurations</relationshipLabel>
        <relationshipName>HSvc_BOM_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOM_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BOM Name</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>BOM Configurations (BOM Name)</relationshipLabel>
        <relationshipName>BOM_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOM_Type__c</fullName>
        <label>BOM Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>	
    <fields>
        <fullName>Hsvc_BusinessModel__c</fullName>
        <label>Business Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_default__c</fullName>
        <label>Is default?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radio__c</fullName>
        <label>Radio</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satellite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Satellite</label>
        <referenceTo>Satellite__c</referenceTo>
        <relationshipLabel>BOM Configurations</relationshipLabel>
        <relationshipName>HSvc_BOM_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BOM Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Adapter_Model__c</columns>
        <columns>Radio__c</columns>
        <columns>Satellite__c</columns>
        <columns>BOM_Type__c</columns>
        <columns>BOM_Name__c</columns>
        <columns>Is_default__c</columns>
        <columns>Active__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BOM-{000}</displayFormat>
        <label>BOM Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Expiry_Date_Greater_Than_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Expiry_Date__c &lt; TODAY(),Expiry_Date__c &lt; Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>